website/i18n/ko/docusaurus-plugin-content-docs/version-0.0.28/concepts/safety.md
---
title: 개인 정보 보호, 무시 규칙 및 안전
sidebar_position: 7
description: 무시 규칙, 승인 게이트, 해시 및 프로필은 개인 컨텍스트가 실수로 캡처되는 것을 방지합니다.
---

# 개인 정보 보호, 무시 규칙 및 안전

Engram은 기본적으로 비공개(private)입니다. 여러 레이어가 비공개 컨텍스트가 영구 메모리로 유출되거나 프로필 경계를 넘어가지 않도록 방지합니다.

## 승인 게이트 (Approval gate)

쓰기 작업에는 사람의 승인이 필요합니다. 에이전트가 후보를 제안하면 사람이 승인, 거부, 편집 또는 아카이브합니다. 직접 터미널 CLI는 A/B/C를 사용합니다. AI 에이전트 채팅은 `yes` / `audit` / `cancel`을 사용합니다.

## 무시 규칙 (Ignore rules)

무시 규칙은 개인 정보 제어 도구입니다. 이 규칙은 라우팅에서 관련이 없거나 중요한 항목을 숨깁니다. `.engramignore` 및 작업 공간 메모리 설정에 이 규칙을 구성하여 비공개 경로와 패턴이 인덱스에 들어가지 않도록 하십시오.

## 해시 (Hashes)

해시는 무결성 검사입니다. 콘텐츠가 인쇄되기 전에 실행되어 일반적인 쓰기 흐름을 우회한 안전하지 않은 편집을 찾아냅니다.

## 프로필 (Profiles)

프로필은 회사, 고객 및 개인 메모리를 격리하여 외부 API 또는 회사에서 제공하는 에이전트가 프로젝트 전체에서 컨텍스트를 유출하지 않도록 합니다. [프로필 및 범위 확인](profiles.md)을 참조하십시오.

## 비밀 정보 및 인젝션 스캔 (Secrets and injection scanning)

저장 시 Engram은 다음을 검사합니다.

- 스키마 유효성 검사 (schema validation)
- 비밀 정보 검사 (secret scan)
- 프롬프트 인젝션 패턴 (prompt-injection patterns)
- 경로 안전성 (path safety)

## 알아두어야 할 제한 사항

기본 Engram 검색은 결정론적 어휘 검색입니다. `engram search --semantic`은 임베딩 지원 의미 체계 검색이 아닌 결정론적 로컬 유사성을 추가합니다. 그래프 벡터는 의미 체계 임베딩이 아닌 로컬 해시 단어 벡터입니다. 모순 감지는 권고 사항입니다. 암호화 설정이 존재하지만 암호화된 저장소는 아직 구현되지 않았습니다.

이러한 한계는 의도적으로 명확하게 기재되어 있습니다. Engram은 사용자에게 현재 구현된 실질적인 기능과 향후 진행할 작업을 구분하여 알려야 합니다.

## 다음 단계

- [쓰기 경로 및 승인](./write-path.md)
- [운영 문제 해결](../operations/troubleshooting.md)

<!-- evidence-foundation:v3:start -->
## 증거 기반 메모리

New files use `schema_version: 3`. Rule and skill memories default to `authority: instruction`; knowledge defaults to `authority: reference`. `revision` starts at 1 and increments on updates. Trace IDs belong in `evidence_refs`, while session or source identities belong in `derived_from`. Legacy v1 (`Context` + `Content` + `Example`) and v2 (`Content`, optional `Origin`) remain readable. Traces live in `.agents/.engram/traces/` with `traces/<trace-id>.jsonl` files recording `engram observe --file` and `save-session --file` provenance, `trust_level`, `sensitivity`, and `retention`.
<!-- evidence-foundation:v3:end -->
